# HPC-SNN

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: centralized-ci.yml
analysis/: __init__.py  aggregate_runs.py  load_runs.py
analysis/resource_measurement/: __init__.py  plots.py
configs/attention/: none.yaml  pfa_client_adaptive.yaml  pfa_fixed.yaml  pfa_public_code_behavior.yaml
configs/base/: centralized.yaml  debug.yaml  research.yaml
configs/datasets/: cifar10_fedsnn_source.yaml  cifar10_published_protocol.yaml  dvs_gesture.yaml  shd.yaml  shd_independent_evaluation.yaml  shd_paper_compatible.yaml  ssc.yaml
configs/distributed/: cpu_debug.yaml
configs/federated/: centralized.yaml  fedavg.yaml  fedsnn_source_compatible.yaml  published_fedsnn.yaml
configs/measurement/: client_resource.yaml
configs/models/: dcls_shd.yaml  lif_2layer.yaml  lif_2layer_128.yaml  lif_2layer_512.yaml  lif_3layer.yaml  svgg9_bntt.yaml  svgg9_bntt_fedsnn_source.yaml
configs/partitioning/: dirichlet_alpha_05.yaml
configs/profiling/: minimal.yaml
docs/: equation_code_discrepancy.md  experimental_protocol.md  reproducibility.md  statistical_protocol.md  threats_to_validity.md
environment/: apptainer.def
environment/roihu/: README.md
experiments/centralized/: manifest.yaml
experiments/device_capacity_evaluation/: manifest.yaml  seeds.yaml
experiments/distributed_evaluation/: manifest.yaml
experiments/federated_baselines/: manifest.yaml
experiments/heterogeneity_evaluation/: manifest.yaml
experiments/hierarchical_reduction_evaluation/: base.yaml  manifest.yaml
experiments/non_iid_energy_evaluation/: base.yaml  manifest.yaml
experiments/published_fedsnn/: manifest.yaml
experiments/resource_measurement/: manifest.yaml
experiments/scheduling_evaluation/: base.yaml  manifest.yaml
experiments/system_scaling_energy_evaluation/: base.yaml  manifest.yaml  seeds.yaml
experiments/week01_pfa_reproduction/: 01_tiny_overfit.yaml  02_plain_lif_shd.yaml  03_dcls_shd.yaml  04_pfa_equation.yaml  05_pfa_public_behavior.yaml  06_lambda_sweep.yaml  07_firing_rate_sweep.yaml  07_spike_statistics_smoke.yaml  08_ssc_tiny_overfit.yaml  09_ssc_smoke.yaml  10_shd_plain_lif_full.yaml  11_shd_dcls_reference.yaml  12_ssc_512_deferred.yaml
literature/: references.bib
literature/paper_notes/: fedsnn_2021.md  pfa_snn_2025.md
results/centralized/: centralized_summary.csv  centralized_summary.json  centralized_summary.md
results/device_capacity_evaluation/: distributed_evaluation_summary.csv  distributed_evaluation_summary.json  distributed_evaluation_summary.md
results/distributed_evaluation/: distributed_evaluation_summary.csv  distributed_evaluation_summary.json  distributed_evaluation_summary.md
results/federated/: federated_summary.csv  federated_summary.json  federated_summary.md
results/fedsnn_paper_evaluation/: published_fedsnn_summary.csv  published_fedsnn_summary.json  published_fedsnn_summary.md
results/hierarchical_reduction_evaluation/: hierarchical_reduction_evaluation_acceptance.json  hierarchical_reduction_evaluation_decision.json  hierarchical_reduction_evaluation_provenance.json  hierarchical_reduction_evaluation_summary.csv  hierarchical_reduction_evaluation_summary.md  slurm-accounting.txt  slurm-job-id-map.txt
results/resource_measurement/: client_cost_model.json  cost_model_evaluation.csv  cost_model_evaluation.md  energy_cost_model.json  instrumentation_calibration.json  resource_measurement_summary.csv  resource_measurement_summary.json  resource_measurement_summary.md  source_cross_dataset_transfer_comparison.csv  source_error_distribution_by_model.csv  source_feature_ablation_comparison.csv  source_observed_load_versus_predicted_assignment_load.csv  source_predicted_versus_measured_gross_energy.csv  source_representative_power_trace.csv  source_runtime_residual_versus_input_event_count.csv
results/scheduling_evaluation/: scheduling_evaluation_acceptance.json  scheduling_evaluation_decision.json  scheduling_evaluation_provenance.json  scheduling_evaluation_summary.csv  scheduling_evaluation_summary.md  slurm-accounting.txt  slurm-job-id-map.txt
scripts/data/: download_ssc.sh  inspect_shd.sh  inspect_ssc.sh
scripts/local/: run_centralized_debug.sh  run_ssc_smoke.sh  run_tiny_overfit.sh
scripts/roihu/: inspect_environment.sh  setup_environment.sh
scripts/slurm/: comparative_measurement_calibration.sbatch  fedavg_single_gpu.sbatch  federated_multigpu.sbatch  heterogeneity_array.sbatch  heterogeneity_context_array.sbatch  hierarchical_reduction.sbatch  non_iid_energy.sbatch  published_fedsnn_array.sbatch  resource_measurement.sbatch  roihu_centralized_array.sbatch  roihu_week01_gpumedium.sbatch  roihu_week01_gputest.sbatch  scheduling_evaluation.sbatch  submit_roihu_centralized.sh  submit_roihu_comparative_calibration.sh  submit_roihu_distributed_evaluation.sh  submit_roihu_federated.sh  submit_roihu_heterogeneity.sh  submit_roihu_hierarchical_reduction.sh  submit_roihu_non_iid_energy.sh  submit_roihu_published_fedsnn.sh  submit_roihu_resource_measurement.sh  submit_roihu_scheduling_evaluation.sh  submit_roihu_system_scaling_energy.sh  submit_roihu_week01.sh  system_scaling_energy.sbatch  week01_centralized_1gpu.sbatch  week07_final_array.sbatch
src/fedapfa/: __init__.py
tests/: conftest.py
tests/fixtures/: synthetic_power_trace.csv
tests/integration/: test_centralized_memorization_validation.py  test_centralized_overfit.py  test_centralized_smoke.py  test_cifar10_federated_round.py  test_federated_one_round.py  test_hierarchical_equivalence.py  test_resource_measurement_cuda.py  test_resource_measurement_pipeline.py
tests/unit/: test_acceptance.py  test_configuration.py  (+24 more)
thesis_records/: adaptive_attention.md  centralized_snn.md  distributed_execution.md  federated_baseline.md  final_evaluation.md  heterogeneity_evaluation.md  hierarchical_reduction.md  non_iid_energy.md  resource_measurement.md  scheduling_evaluation.md  statistical_analysis.md  system_scaling_energy.md
(+267 files in other folders)
