[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedapfa"
version = "0.1.0"
description = "Federated adaptive Parameter-free Attention for spiking neural networks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rezwan Ahmad Nayreed", email = "RezwanAhmad.Nayreed@student.oulu.fi" }]
dependencies = ["torch>=2.1", "numpy>=1.24", "h5py>=3.9", "pyyaml>=6.0", "spikingjelly==0.0.0.0.14"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
dcls = ["dcls==0.1.1"]

[project.scripts]
fedapfa-download-data = "fedapfa.cli.download_dataset:main"
fedapfa-inspect-data = "fedapfa.cli.inspect_dataset:main"
fedapfa-validate-config = "fedapfa.cli.validate_run:main"
fedapfa-train-centralized = "fedapfa.cli.train_centralized:main"
fedapfa-train-federated = "fedapfa.cli.train_federated:main"
fedapfa-evaluate-checkpoint = "fedapfa.cli.evaluate_checkpoint:main"
fedapfa-summarize-centralized = "fedapfa.cli.summarize_centralized:main"
fedapfa-summarize-federated = "fedapfa.cli.summarize_federated:main"
fedapfa-derive-heterogeneity-context = "fedapfa.cli.derive_heterogeneity_context:main"
fedapfa-summarize-heterogeneity = "fedapfa.cli.summarize_heterogeneity:main"
fedapfa-summarize-published-fedsnn = "fedapfa.cli.summarize_published_fedsnn:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fedapfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["dcls: requires the optional dcls package", "cuda: requires one CUDA device"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["analysis", "src/fedapfa/distributed", "src/fedapfa/scheduling", "tests/unit/distributed", "tests/unit/scheduling"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
